--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prettier": "^3.4.1"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "mongoose": "^8.8.3"
